[package]
name = "tenable"
version = "0.1.1"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Tenable API abstraction for rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/tenable-rs"
readme = "README.md"
keywords = ["tenable", "api"]
categories = ["api-bindings"]

[dependencies]
bytes = "0.5"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
async-std = "1.6"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = "0.2"
